force-app/main/default/objects/CWS_Control_Trial__c/CWS_Control_Trial__c.object-meta.xml
<CustomObject>
    <description>Sync to Marketo</description>
    <label>Control Trial</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Control Trial ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>