force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Control_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>