force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Automation_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Automation_Error__c</fullName>
    <description>Set by flow if Account Contact or Lead cannot be found</description>
    <label>Automation Error</label>
    <type>TextArea</type>
</CustomField>