force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Company_Name__c</fullName>
    <description>This field displays the company name if the control trial is associated to a lead or contact.</description>
    <inlineHelpText>This is the company for the lead or contact associated with the control trial record.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>