force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Control_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>