force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact_Status__c</fullName>
    <formula>text(CWS_Contact__r.CWS_Contact_Status__c )</formula>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>