force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Control_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Account_ID__c</fullName>
    <description>Unique ID created by Control Integration</description>
    <externalId>true</externalId>
    <label>Control Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>