force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Dual_Trial_Selection__c.field-meta.xml
<CustomField>
    <fullName>CWS_Dual_Trial_Selection__c</fullName>
    <inlineHelpText>Which trial type did they select</inlineHelpText>
    <label>Dual Trial Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>