force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CWS_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>