force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Instance_ID__c</fullName>
    <label>Instance ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>