force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>CWS_Last_Login__c</fullName>
    <inlineHelpText>Last time user logged into account</inlineHelpText>
    <label>Last Login</label>
    <type>Date</type>
</CustomField>