force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Lead__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Control_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>