force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Status__c</fullName>
    <formula>Text(CWS_Lead__r.Status)</formula>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>