force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_License_Limit_Exceeded_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWS_License_Limit_Exceeded_Last_Updated__c</fullName>
    <inlineHelpText>Last time they exceeded their license limit</inlineHelpText>
    <label>License Limit Exceeded Last Updated</label>
    <type>Date</type>
</CustomField>