force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Modify_Custom_Property__c.field-meta.xml
<CustomField>
    <fullName>CWS_Modify_Custom_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify Custom Property</label>
    <type>Checkbox</type>
</CustomField>