force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Original_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Original_Purchase_Date__c</fullName>
    <label>Original Purchase Date</label>
    <type>Date</type>
</CustomField>