force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Partner_Billing_Interval__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Billing_Interval__c</fullName>
    <label>Partner Billing Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>