force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>CWS_Probability_Score__c</fullName>
    <label>Probability Score</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Percent</type>
</CustomField>