force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>