force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Ran_Files__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ran_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ran Files</label>
    <type>Checkbox</type>
</CustomField>