force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Reached_License_Limit__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reached_License_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reached License Limit</label>
    <type>Checkbox</type>
</CustomField>