force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>CWS_Record_Type_Text__c</fullName>
    <description>This is used in automation to eliminate the need for the integration to know the 18 character Record Type ID.  Values must match record type Name values</description>
    <label>Record Type Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>