force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Remote_Printing__c.field-meta.xml
<CustomField>
    <fullName>CWS_Remote_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Printing</label>
    <type>Checkbox</type>
</CustomField>