force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Status_And_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status_And_Type__c</fullName>
    <formula>CWS_Trial_Status__c + if( !ispickval( CWS_Purchase_Type__c ,&apos;&apos;),&apos; - &apos;+Text( CWS_Purchase_Type__c ),&apos;&apos;) + if( !isblank(CWS_License_Type__c),&apos; - &apos; + CWS_License_Type__c,&apos;&apos;)</formula>
    <label>Status and Type</label>
    <type>Text</type>
</CustomField>