force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_Active_Access_Agents__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Active_Access_Agents__c</fullName>
    <label>Trial Active Access Agents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>