force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_End_Date__c</fullName>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>