force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Status__c</fullName>
    <formula>if( !isblank(CWS_Purchase_Date__c),&apos;Partner&apos;,if( isblank(CWS_Purchase_Date__c) &amp;&amp; !isblank( CWS_Trial_Start_Date__c ) &amp;&amp; (isblank( CWS_Trial_End_Date__c ) ||  CWS_Trial_End_Date__c &gt; today()),&apos;Active&apos;,if(isblank( CWS_Purchase_Date__c ) &amp;&amp;  CWS_Trial_End_Date__c &lt;= today(),&apos;Expired&apos;,&apos;Unknown Status&apos;)))</formula>
    <label>Trial Status</label>
    <type>Text</type>
</CustomField>