force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_Total_Guest_Connections__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Total_Guest_Connections__c</fullName>
    <label>Trial Total Guest Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>