force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Type__c</fullName>
    <label>Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Plus</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>