force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Trial_Validation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Validation</label>
    <type>Checkbox</type>
</CustomField>