force-app/main/default/objects/CWS_Control_Trial__c/fields/CWS_Unique_Logins__c.field-meta.xml
<CustomField>
    <fullName>CWS_Unique_Logins__c</fullName>
    <label>Unique Logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>