force-app/main/default/objects/CWS_Control_Trial__c/fields/Outreach_Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Actively_Being_Sequenced__c</fullName>
    <formula>if( !isblank(CWS_Contact__c) &amp;&amp;  CWS_Contact__r.Outreach_Actively_Being_Sequenced__c = true,true,if(!isblank( CWS_Lead__c ) &amp;&amp;  CWS_Lead__r.Outreach_Actively_being_sequenced__c = true,true,false))</formula>
    <label>Outreach Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>