force-app/main/default/objects/CWS_Control_Trial__c/fields/Outreach_Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Name__c</fullName>
    <formula>if(!isblank( CWS_Contact__c ), CWS_Contact__r.Outreach_Current_Sequence_Name__c ,if(!isblank(CWS_Lead__c), CWS_Lead__r.Outreach_Current_Sequence_Name__c ,&apos;&apos;))</formula>
    <label>Outreach Current Sequence Name</label>
    <type>Text</type>
</CustomField>