force-app/main/default/objects/CWS_Control_Trial__c/listViews/Active_Control_Trials.listView-meta.xml
<ListView>
    <fullName>Active_Control_Trials</fullName>
    <columns>NAME</columns>
    <columns>CWS_Company_Name__c</columns>
    <columns>CWS_Status_And_Type__c</columns>
    <columns>CWS_Purchase_Type__c</columns>
    <columns>CWS_Lead__c</columns>
    <columns>CWS_Contact__c</columns>
    <columns>CWS_Control_Account_ID__c</columns>
    <columns>CWS_Trial_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Trial_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Control Trials</label>
</ListView>