force-app/main/default/objects/CWS_Control_Trial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CWS_Company_Name__c</columns>
    <columns>CWS_Contact__c</columns>
    <columns>CWS_Account__c</columns>
    <columns>CWS_Lead__c</columns>
    <columns>CWS_Status_And_Type__c</columns>
    <columns>CWS_Purchase_Type__c</columns>
    <columns>CWS_Trial_Start_Date__c</columns>
    <columns>CWS_Trial_End_Date__c</columns>
    <columns>CWS_Purchase_Date__c</columns>
    <columns>CWS_License_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>