force-app/main/default/objects/CWS_Control_Trial__c/listViews/Partner.listView-meta.xml
<ListView>
    <fullName>Partner</fullName>
    <columns>NAME</columns>
    <columns>CWS_Company_Name__c</columns>
    <columns>CWS_Status_And_Type__c</columns>
    <columns>CWS_Contact__c</columns>
    <columns>CWS_Contact_Status__c</columns>
    <columns>CWS_License_Type__c</columns>
    <columns>CWS_Trial_Start_Date__c</columns>
    <columns>CWS_Trial_End_Date__c</columns>
    <columns>CWS_Purchase_Date__c</columns>
    <columns>CWS_Purchase_Type__c</columns>
    <columns>Outreach_Actively_Being_Sequenced__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CWS_Control_Trial__c.Partner</value>
    </filters>
    <label>Partner</label>
</ListView>